argocd/message-service/base/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: message-service
  labels:
    app: message-service
spec:
  replicas: 1
  selector:
    matchLabels:
      app: message-service
  template:
    metadata:
      labels:
        app: message-service
    spec:
      containers:
        - name: message-service
          image: deepinnext/message-service:fa10ec8a52fd4f98386b5a30ff49c945350315c0
          ports:
            - containerPort: 5000
          resources:
            requests:
              memory: "256Mi"
              cpu: "250m"
            limits:
              memory: "512Mi"
              cpu: "500m"
          readinessProbe:
            httpGet:
              path: /health
              port: 5000
            initialDelaySeconds: 5
            periodSeconds: 5
          livenessProbe:
            httpGet:
              path: /health
              port: 5000
            initialDelaySeconds: 5
            periodSeconds: 5
