argocd/message-service/base/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: message-service
spec:
  type: ClusterIP
  selector:
    app: message-service
  ports:
    - protocol: TCP
      port: 80
      targetPort: 5000
